<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_NumericConfig" Id="{12345678-1234-5678-1234-567812345001}">
    <Declaration><![CDATA[TYPE ST_NumericConfig :
STRUCT
	Unit        : STRING(20) := '';      // '°C', 'bar', 'L/min', '%'
	nMin         : REAL := 0.0;           // Minimum værdi
	nMax         : REAL := 100.0;         // Maximum værdi
	Decimals    : USINT := 2;            // Antal decimaler til visning
	Step        : REAL := 1.0;           // Step størrelse for justering
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>